--- a/main.css
+++ b/main.css
@@ -14,11 +14,11 @@ header{
     display: flex;
     align-items: center;
     margin-bottom: 40px;
-
+ 
 }
 
 header img{
-    height: 40px;
+    height: 36px;
     margin-right: 16px;
 
 }
@@ -38,8 +38,8 @@ header h1 {
 form {
     
     display: flex;
-    max-width:0px;
-    width: 0%;
+    max-width:640px;
+    width: 100%;
     justify-content: space-between;
     margin-bottom: 56px;
     
@@ -62,6 +62,10 @@ form button {
     cursor: pointer;
     padding: 8px;
     
+}
+
+table {
+    width: 100%;
 }
 
 table th {
